--- a/styles/modules/_tags.scss
+++ b/styles/modules/_tags.scss
@@ -3,7 +3,7 @@
   @include inline-flexbox;
   @include text-style(12);
   height: 20px;
-  padding: 0px 6px;
+  padding: 0 6px;
   font-weight: 700;
   border-radius: 4px;
 }
