--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -20,6 +20,10 @@
       display: block;
       width: 100%;
       height: 100%;
+      background-image: url('../../assets/images/img-user-default.png');
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
       object-fit: cover;
     }
   }
