--- a/styles/components/_drawer-menu.scss
+++ b/styles/components/_drawer-menu.scss
@@ -1,5 +1,48 @@
 .drawer-menu {
   $border-top: 1px solid $border;
+  $drawer-menu-item-height: 36px;
+  $community-length: 8;
+  $store-length: 9;
+  $expert-length: 2;
+  $drawer-menu-list-padding: 8px;
+
+  @function _calculate-max-content-height($length) {
+    @return $drawer-menu-item-height * $length + $drawer-menu-list-padding;
+  }
+
+  &.is-active {
+    .drawer-menu-button {
+      color: $blue;
+    }
+  }
+
+  &.is-open {
+    &.is-community {
+      .drawer-menu-content {
+        max-height: _calculate-max-content-height($community-length);
+      }
+    }
+
+    &.is-store {
+      .drawer-menu-content {
+        max-height: _calculate-max-content-height($store-length);
+      }
+    }
+
+    &.is-expert {
+      .drawer-menu-content {
+        max-height: _calculate-max-content-height($expert-length);
+      }
+    }
+
+    .drawer-menu-button i:last-child {
+      transform: translateY(-50%) rotate(180deg);
+    }
+
+    .drawer-menu-list {
+      padding-bottom: 8px;
+    }
+  }
 
   &-button {
     @include flexbox(start);
@@ -10,6 +53,7 @@
     padding: 0 8px;
     font-weight: 700;
     border-top: $border-top;
+    transition: color 200ms ease-in-out;
 
     i {
       &:first-child {
@@ -25,11 +69,15 @@
         right: 8px;
         font-size: 16px;
         color: $primary;
+        transition: transform 200ms ease-in-out;
       }
     }
   }
 
   &-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 200ms ease-in-out;
   }
 
   &-item {
@@ -37,7 +85,7 @@
       @include flexbox(start);
       @include text-style(14, $primary);
       width: 100%;
-      height: 36px;
+      height: $drawer-menu-item-height;
       padding: 0 12px;
       font-weight: 700;
     }
@@ -47,6 +95,12 @@
       top: 1px;
       font-size: 16px;
       color: $red;
+    }
+
+    &.is-open {
+      a {
+        color: $blue;
+      }
     }
   }
 }
