--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -1,7 +1,20 @@
 .my-menu {
   $button-size: 32px;
   $toolltip-size: 12px;
+
   position: relative;
+
+  &.is-active {
+    .my-menu-button {
+      border-color: $blue;
+    }
+
+    .my-menu-content {
+      opacity: 1;
+      visibility: visible;
+      transform: translate3d(-50%, 0, 0);
+    }
+  }
 
   &-button {
     width: $button-size;
@@ -9,11 +22,10 @@
     overflow: hidden;
     border: 3px solid $white;
     border-radius: 50%;
+    transition: border-color 200ms ease-in-out;
 
-    &:hover,
-    &.is-active {
+    &:hover {
       border-color: $blue;
-      transition: border-color 200ms ease-in-out;
     }
 
     img {
@@ -32,7 +44,12 @@
     @include pos-center-x();
     top: $button-size + $toolltip-size + 8px;
     border-radius: 4px;
+    opacity: 0;
+    visibility: hidden;
     box-shadow: $dropdown-shadow;
+    transform: translate3d(-50%, -10px, 0);
+    transition: visibility 200ms ease-in-out, opacity 200ms ease-in-out,
+      transform 200ms ease-in-out;
 
     &::before,
     &::after {
