--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -6,17 +6,19 @@
   }
 
   &-list {
-    position: relative;
-    left: -8px;
     @include inline-flexbox(start);
+    height: 40px;
+    padding: 1px 7px 0;
+    margin-left: -15px;
     white-space: nowrap;
+    border-bottom: 1px solid $border;
   }
 
   &-item {
     &.is-active {
       a {
         color: $blue;
-        border-bottom: 2px solid $blue;
+        border-bottom-color: $blue;
       }
     }
 
@@ -26,6 +28,7 @@
       height: 40px;
       padding: 0 8px;
       font-weight: 700;
+      border-bottom: 2px solid transparent;
     }
 
     .ic-new {
