--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,4 +1,7 @@
 .lnb {
+  $lnb-item-padding: 8px;
+  $grid-margin: $sm-margin + $gutter / 2;
+
   overflow-x: auto;
 
   &::-webkit-scrollbar {
@@ -8,8 +11,8 @@
   &-list {
     @include inline-flexbox(start);
     height: 40px;
-    padding: 1px 7px 0;
-    margin-left: -15px;
+    padding: 1px #{$grid-margin-$lnb-item-padding} 0;
+    margin-left: -#{$grid-margin};
     white-space: nowrap;
     border-bottom: 1px solid $border;
   }
@@ -26,13 +29,9 @@
       @include inline-flexbox(start);
       @include text-style(13, $dark);
       height: 40px;
-      padding: 0 8px;
+      padding: 0 $lnb-item-padding;
       font-weight: 700;
       border-bottom: 2px solid transparent;
-    }
-
-    .ic-new {
-      color: $red;
     }
   }
 }
