--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -2,16 +2,13 @@
   $lnb-item-padding: 8px;
   $grid-margin: $sm-margin + $gutter / 2;
 
+  @include no-scrollbar();
   overflow-x: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
 
   &-list {
     @include inline-flexbox(start);
     height: 40px;
-    padding: 1px #{$grid-margin-$lnb-item-padding} 0;
+    padding: 1px #{$grid-margin - $lnb-item-padding} 0;
     margin-left: -#{$grid-margin};
     white-space: nowrap;
     border-bottom: 1px solid $border;
