--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -1,15 +1,14 @@
 .lnb {
-  $lnb-height-sm: 40px;
-  $lnb-height-md: 50px;
   $lnb-item-padding: 8px;
   $grid-margin: $sm-margin + $gutter / 2;
 
   @include no-scrollbar();
   overflow-x: auto;
+  background-color: $white;
 
   &-list {
     @include inline-flexbox(start);
-    height: 40px;
+    height: $lnb-height-sm;
     padding: 1px #{$grid-margin - $lnb-item-padding} 0;
     margin-left: -#{$grid-margin};
     white-space: nowrap;
