🐛 Manage z-indexes of gnb and lnb components

--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,3 +1,6 @@
-$overray-level: 10;
-$sidebar-level: 20;
-$search-madal-level: 30;
+$gnb-level: 50;
+$lnb-level: 40;
+
+$overray-level: 100;
+$sidebar-level: 200;
+$search-madal-level: 300;
