🐛  Fix a tag-gray style in _tags.scss

--- a/styles/modules/_tags.scss
+++ b/styles/modules/_tags.scss
@@ -22,6 +22,6 @@
 
 .tag-gray {
   @extend %tage-base;
-  color: $border;
-  background-color: $secondary;
+  color: $secondary;
+  background-color: $border;
 }
