--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,6 +32,7 @@
 @import './components/search-history';
 @import './components/breadcrumb';
 @import './components/product-carousel';
+@import './components/product_info';
 
 @import './layouts/grid';
 @import './layouts/gnb';
