--- a/styles/components/_product_info.scss
+++ b/styles/components/_product_info.scss
@@ -22,7 +22,8 @@
         @include flexbox(start);
         margin-bottom: 16px;
 
-        .star-rating-13 {
+        .star-rating {
+          @include star-rating(13px);
           margin-right: 8px;
         }
 
@@ -36,6 +37,7 @@
 
   &-price {
     margin-bottom: 14px;
+
     .info-original-price,
     .info-sale-price {
       @include flexbox(start);
@@ -47,11 +49,6 @@
 
     .price-20 {
       margin-right: 4px;
-    }
-
-    .currency {
-      @include text-style(16);
-      font-weight: 700;
     }
 
     .discount-rate {
@@ -86,12 +83,78 @@
   }
 
   &-delivery {
+    @include text-style(16, $primary);
     padding-top: 12px;
     border-top: 1px solid $border;
 
     span {
       display: block;
       margin-bottom: 2px;
+    }
+  }
+
+  @include responsive(T) {
+    padding: 0;
+
+    .info-brand,
+    .info-title {
+      display: block;
+      margin-bottom: 8px;
+    }
+
+    .info-title {
+      @include text-style(24);
+    }
+
+    .info-review {
+      .star-rating {
+        font-size: 16px;
+      }
+
+      p strong {
+        margin-right: -3px;
+      }
+    }
+
+    .info-price-wrapper {
+      @include flexbox(start, end);
+      margin-bottom: 12px;
+    }
+
+    .discount-rate {
+      align-items: flex-end;
+      margin-right: 16px;
+
+      .rate {
+        font-size: 44px;
+        line-height: 36px;
+      }
+
+      .percent {
+        line-height: 20px;
+      }
+    }
+
+    .info-sale-price {
+      margin-bottom: 0;
+
+      .price-32 {
+        margin-right: 8px;
+      }
+    }
+
+    .info-point {
+      margin-bottom: 20px;
+    }
+
+    &-delivery {
+      padding-top: 16px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid $border;
+
+      span {
+        margin-bottom: 8px;
+      }
     }
   }
 }
