🚸 Set hover, active state design of checkout-card event

--- a/styles/components/_checkout-card.scss
+++ b/styles/components/_checkout-card.scss
@@ -22,11 +22,26 @@
     width: 20px;
     height: 20px;
     color: $secondary;
+
+    &:hover,
+    &:active {
+      opacity: 0.4;
+    }
   }
 
   .checkout-select {
     position: relative;
     display: inline-block;
+
+    &:hover {
+      select {
+        border-color: $tertiary;
+      }
+
+      i {
+        color: $secondary;
+      }
+    }
 
     select {
       width: 72px;
@@ -36,6 +51,7 @@
       background-color: $white;
       border: 1px solid $border;
       border-radius: 3px;
+      transition: border-color 100ms ease-in-out;
       appearance: none;
     }
 
@@ -45,6 +61,7 @@
       font-size: 20px;
       color: $tertiary;
       pointer-events: none;
+      transition: color 100ms ease-in-out;
     }
   }
 
