--- a/styles/style.scss
+++ b/styles/style.scss
@@ -36,6 +36,7 @@
 @import './components/product_info';
 @import './components/order-form';
 @import './components/checkout-card';
+@import './components/product-sectioin-headers';
 
 @import './layouts/grid';
 @import './layouts/gnb';
