--- a/styles/style.scss
+++ b/styles/style.scss
@@ -36,6 +36,7 @@
 @import './components/product_info';
 @import './components/order-form';
 @import './components/checkout-card';
+@import './components/product-section';
 @import './components/product-sectioin-header';
 @import './components/product-table';
 
