--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,6 +40,7 @@
 @import './components/product-section';
 @import './components/product-sectioin-header';
 @import './components/product-table';
+@import './components/product-spec';
 
 @import './layouts/grid';
 @import './layouts/gnb';
